update student projects

--- a/studentprojects/index.html
+++ b/studentprojects/index.html
@@ -398,7 +398,7 @@ Note: This collection is work in progress. As of now:</p>
   <li>2025, MSc, <em>DeepFake Audio Classification using Vision Transformers</em>, 2 students</li>
   <li>2025, RP, <em>Evaluating Temporal Alignment in Music-to-Video Generative AI</em>, with <a href="https://www.linkedin.com/in/leo-vitasovic-10b3721b5/" rel="external nofollow noopener" target="_blank">Leo Vitasovic</a>
 </li>
-  <li>2025, BSc, <em>Affect Recognition on Infants</em>, 2 students, with <a href="https://www.linkedin.com/in/martin-lund-trinhammer-b94420134/" rel="external nofollow noopener" target="_blank">Martin Lund Trinhammer</a>
+  <li>2025, BSc, <em>Affect Recognition on Infants</em>, <a href="https://www.linkedin.com/in/florentina-fabregas-alippi-b06133195/" rel="external nofollow noopener" target="_blank">Florentina Fabregas Alippi</a> and <a href="https://www.linkedin.com/in/raivis-lickrastins/" rel="external nofollow noopener" target="_blank">Raivis Lickrastins</a>, with <a href="https://www.linkedin.com/in/martin-lund-trinhammer-b94420134/" rel="external nofollow noopener" target="_blank">Martin Lund Trinhammer</a>
 </li>
   <li>2025, RP, <em>Is AEC software fixed by Speckle, if so, to what extend?</em>, 2 students, with <a href="https://pure.itu.dk/da/persons/harshit-harshit" rel="external nofollow noopener" target="_blank">Harshit</a>
 </li>
